# BTree-file-organization

./: BTree.h  BTreePage.cpp  BTreePage.h  BTreeRecord.cpp  CMakeLists.txt  FileRecord.cpp  FileRecord.h  Program.h  README.md
src/: BTree.cpp  BTree.h  BTreePage.cpp  BTreePage.h  BTreeRecord.cpp  BTreeRecord.h  DataManager.cpp  DataManager.h  FileRecord.cpp  FileRecord.h  Program.cpp  Program.h  instructions.txt  main.cpp
